apps/dependency-track/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dependency-track-frontend-ingress
  namespace: dependency-track
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dependency-track
      app.kubernetes.io/component: frontend
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - {protocol: TCP, port: 8080}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dependency-track-apiserver-ingress
  namespace: dependency-track
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dependency-track
      app.kubernetes.io/component: apiserver
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - {protocol: TCP, port: 8080}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - {protocol: TCP, port: 9000}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dependency-track-postgres-ingress
  namespace: dependency-track
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: dependency-track-db
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: dependency-track
              app.kubernetes.io/component: apiserver
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: dependency-track-logical-backup
      ports:
        - {protocol: TCP, port: 5432}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - {protocol: TCP, port: 8000}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - {protocol: TCP, port: 9187}
